--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Naresh Sonagoni</h1>
+    <script src="myfirstjs.js"></script>
 </body>
 </html>
