--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Naresh Sonagoni</h1>
-    <script src="myfirstjs.js"></script>
+    <script src="heartPattern.js"></script>
 </body>
 </html>
