--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Naresh Sonagoni</h1>
-    <script src="exercises3.js"></script>
+    <script src="stopWatch.js"></script>
 </body>
 
 </html>
